--- a/src/dev.html
+++ b/src/dev.html
@@ -5,11 +5,14 @@
 <title>Live2d Test Env</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div id="app">
     <canvas id="live2d" width="280" height="250" class="live2d"></canvas></div>
-<script type="text/javascript" src="device.min.js"></script>
+    <script type="text/javascript">
+        loadlive2d("live2d", "//live2d.fghrsh.net/api/get/?id=4-0", 0.5);
+    </script>
 </body>
 </html>
 <!-- loadlive2d("live2dcanvas", "../assets/name/name.model.json", 0.5); -->
