--- a/dev.html
+++ b/dev.html
@@ -5,7 +5,8 @@
 <title>Live2d Test Env</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="live2d.js"></script>
+<script type="text/javascript" src="src/Core/live2dcubismcore.js"></script>
+<script type="text/javascript" src="dist/live2d.js"></script>
 </head>
 <body>
 <div id="app">
