v3可以显示了，但还是有问题

--- a/dev.html
+++ b/dev.html
@@ -12,7 +12,8 @@
 <div id="app">
     <canvas id="live2d" width="280" height="250" class="live2d"></canvas></div>
     <script type="text/javascript">
-        loadlive2d("live2d", "//live2d.fghrsh.net/api/get/?id=4-0", 0.5);
+        loadlive2dv3('live2d','');
+        //loadlive2d("live2d", "//live2d.fghrsh.net/api/get/?id=4-0", 0.5);
     </script>
 </body>
 </html>
